добавил к каждому тегу с картинками размеры

--- a/catalog.html
+++ b/catalog.html
@@ -64,7 +64,9 @@
 				<ul class="content__product-list">
 					<li class="content__product-item">
 						<article class="product">
-							<figure class="product__image"><img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California"></figure>
+							<figure class="product__image">
+								<img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100">
+							</figure>
 							<h3 class="product__title">Набор для путешествий</h3>
 							<p class="product__maker">&laquo;Baxter of California&raquo;</p>
 							<div class="product__price-wrapper">
@@ -75,7 +77,9 @@
 					</li>
 					<li class="content__product-item">
 						<article class="product">
-							<figure class="product__image"><img src="http://placehold.it/150x100" alt="Увлажняющий кондиционер Baxter of California"></figure>
+							<figure class="product__image">
+								<img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100">
+							</figure>
 							<h3 class="product__title">Увлажняющий кондиционер</h3>
 							<p class="product__maker">&laquo;Baxter of California&raquo;</p>
 							<div class="product__price-wrapper">
@@ -86,7 +90,9 @@
 					</li>
 					<li class="content__product-item">
 						<article class="product">
-							<figure class="product__image"><img src="http://placehold.it/150x100" alt="Гель для волос Suavecito"></figure>
+							<figure class="product__image">
+								<img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100">
+							</figure>
 							<h3 class="product__title">Гель для волос</h3>
 							<p class="product__maker">&laquo;Suavecito&raquo;</p>
 							<div class="product__price-wrapper">
@@ -97,7 +103,9 @@
 					</li>
 					<li class="content__product-item">
 						<article class="product">
-							<figure class="product__image"><img src="http://placehold.it/150x100" alt="Глина для укладки волос American crew"></figure>
+							<figure class="product__image">
+								<img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100">
+							</figure>
 							<h3 class="product__title">Глина для укладки волос</h3>
 							<p class="product__maker">&laquo;American crew&raquo;</p>
 							<div class="product__price-wrapper">
@@ -108,7 +116,9 @@
 					</li>
 					<li class="content__product-item">
 						<article class="product">
-							<figure class="product__image"><img src="http://placehold.it/150x100" alt="Гель для волос American crew"></figure>
+							<figure class="product__image">
+								<img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100">
+							</figure>
 							<h3 class="product__title">Гель для волос</h3>
 							<p class="product__maker">&laquo;American crew&raquo;</p>
 							<div class="product__price-wrapper">
@@ -119,7 +129,9 @@
 					</li>
 					<li class="content__product-item">
 						<article class="product">
-							<figure class="product__image"><img src="http://placehold.it/150x100" alt="Набор для бритья Baxter of California"></figure>
+							<figure class="product__image">
+								<img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100">
+							</figure>
 							<h3 class="product__title">Набор для бритья</h3>
 							<p class="product__maker">&laquo;Baxter of California&raquo;</p>
 							<div class="product__price-wrapper">
