--- a/catalog-item.html
+++ b/catalog-item.html
@@ -42,7 +42,7 @@
 					<li><a href="#" title="Главная">Главная</a></li>
 					<li><a href="#" title="Магазин">Магазин</a></li>
 					<li><a href="#" title="Средства для ухода">Средства для ухода</a></li>
-					<li><a href="#" title="Набор для путешествий Baxter of California">Набор для путешествий &laquo;Baxter of California&raquo;</a></li>
+					<li>Набор для путешествий &laquo;Baxter of California&raquo;</li>
 				</ul>
 			</nav>
 		</section>
