--- a/catalog.html
+++ b/catalog.html
@@ -41,7 +41,7 @@
 				<ul>
 					<li><a href="#" title="Главная">Главная</a></li>
 					<li><a href="#" title="Магазин">Магазин</a></li>
-					<li><a href="#" title="Средства для ухода">Средства для ухода</a></li>
+					<li>Средства для ухода</li>
 				</ul>
 			</nav>
 		</section>
