--- a/catalog.html
+++ b/catalog.html
@@ -67,7 +67,7 @@
 					<li class="content__product-item">
 						<article class="product">
 							<figure class="product__image">
-								<img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100">
+								<a href="catalog-item.html" title="Перейти на страницу товара"><img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100"></a>
 							</figure>
 							<h3 class="product__title">Набор для путешествий</h3>
 							<p class="product__maker">&laquo;Baxter of California&raquo;</p>
@@ -80,7 +80,7 @@
 					<li class="content__product-item">
 						<article class="product">
 							<figure class="product__image">
-								<img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100">
+								<a href="catalog-item.html" title="Перейти на страницу товара"><img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100"></a>
 							</figure>
 							<h3 class="product__title">Увлажняющий кондиционер</h3>
 							<p class="product__maker">&laquo;Baxter of California&raquo;</p>
@@ -93,7 +93,7 @@
 					<li class="content__product-item">
 						<article class="product">
 							<figure class="product__image">
-								<img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100">
+								<a href="catalog-item.html" title="Перейти на страницу товара"><img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100"></a>
 							</figure>
 							<h3 class="product__title">Гель для волос</h3>
 							<p class="product__maker">&laquo;Suavecito&raquo;</p>
@@ -106,7 +106,7 @@
 					<li class="content__product-item">
 						<article class="product">
 							<figure class="product__image">
-								<img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100">
+								<a href="catalog-item.html" title="Перейти на страницу товара"><img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100"></a>
 							</figure>
 							<h3 class="product__title">Глина для укладки волос</h3>
 							<p class="product__maker">&laquo;American crew&raquo;</p>
@@ -119,7 +119,7 @@
 					<li class="content__product-item">
 						<article class="product">
 							<figure class="product__image">
-								<img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100">
+								<a href="catalog-item.html" title="Перейти на страницу товара"><img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100"></a>
 							</figure>
 							<h3 class="product__title">Гель для волос</h3>
 							<p class="product__maker">&laquo;American crew&raquo;</p>
@@ -132,7 +132,7 @@
 					<li class="content__product-item">
 						<article class="product">
 							<figure class="product__image">
-								<img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100">
+								<a href="catalog-item.html" title="Перейти на страницу товара"><img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100"></a>
 							</figure>
 							<h3 class="product__title">Набор для бритья</h3>
 							<p class="product__maker">&laquo;Baxter of California&raquo;</p>
