--- a/catalog.html
+++ b/catalog.html
@@ -69,8 +69,10 @@
 							<figure class="product__image">
 								<a href="catalog-item.html" title="Перейти на страницу товара"><img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100"></a>
 							</figure>
-							<h3 class="product__title">Набор для путешествий</h3>
-							<p class="product__maker">&laquo;Baxter of California&raquo;</p>
+							<a href="catalog-item.html" title="Перейти на страницу товара" class="product__title">
+								<p>Набор для путешествий</p>
+								<p class="product__maker">&laquo;Baxter of California&raquo;</p>
+							</a>
 							<div class="product__price-wrapper">
 								<div class="product__price"></div>
 								<a href="" class="product__btn-buy"></a>
@@ -82,8 +84,10 @@
 							<figure class="product__image">
 								<a href="catalog-item.html" title="Перейти на страницу товара"><img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100"></a>
 							</figure>
-							<h3 class="product__title">Увлажняющий кондиционер</h3>
-							<p class="product__maker">&laquo;Baxter of California&raquo;</p>
+							<a href="catalog-item.html" title="Перейти на страницу товара" class="product__title">
+								<p>Увлажняющий кондиционер</p>
+								<p class="product__maker">&laquo;Baxter of California&raquo;</p>
+							</a>
 							<div class="product__price-wrapper">
 								<div class="product__price"></div>
 								<a href="" class="product__btn-buy"></a>
@@ -95,8 +99,10 @@
 							<figure class="product__image">
 								<a href="catalog-item.html" title="Перейти на страницу товара"><img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100"></a>
 							</figure>
-							<h3 class="product__title">Гель для волос</h3>
-							<p class="product__maker">&laquo;Suavecito&raquo;</p>
+							<a href="catalog-item.html" title="Перейти на страницу товара" class="product__title">
+								<p>Гель для волос</p>
+								<p class="product__maker">&laquo;Suavecito&raquo;</p>
+							</a>
 							<div class="product__price-wrapper">
 								<div class="product__price"></div>
 								<a href="" class="product__btn-buy"></a>
@@ -108,8 +114,10 @@
 							<figure class="product__image">
 								<a href="catalog-item.html" title="Перейти на страницу товара"><img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100"></a>
 							</figure>
-							<h3 class="product__title">Глина для укладки волос</h3>
-							<p class="product__maker">&laquo;American crew&raquo;</p>
+							<a href="catalog-item.html" title="Перейти на страницу товара" class="product__title">
+								<p>Глина для укладки волос</p>
+								<p class="product__maker">&laquo;American crew&raquo;</p>
+							</a>
 							<div class="product__price-wrapper">
 								<div class="product__price"></div>
 								<a href="" class="product__btn-buy"></a>
@@ -121,8 +129,10 @@
 							<figure class="product__image">
 								<a href="catalog-item.html" title="Перейти на страницу товара"><img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100"></a>
 							</figure>
-							<h3 class="product__title">Гель для волос</h3>
-							<p class="product__maker">&laquo;American crew&raquo;</p>
+							<a href="catalog-item.html" title="Перейти на страницу товара" class="product__title">
+								<p>Гель для волос</p>
+								<p class="product__maker">&laquo;American crew&raquo;</p>
+							</a>
 							<div class="product__price-wrapper">
 								<div class="product__price"></div>
 								<a href="" class="product__btn-buy"></a>
@@ -134,8 +144,10 @@
 							<figure class="product__image">
 								<a href="catalog-item.html" title="Перейти на страницу товара"><img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100"></a>
 							</figure>
-							<h3 class="product__title">Набор для бритья</h3>
-							<p class="product__maker">&laquo;Baxter of California&raquo;</p>
+							<a href="catalog-item.html" title="Перейти на страницу товара" class="product__title">
+								<p>Набор для бритья</p>
+								<p class="product__maker">&laquo;Baxter of California&raquo;</p>
+							</a>
 							<div class="product__price-wrapper">
 								<div class="product__price"></div>
 								<a href="" class="product__btn-buy"></a>
