--- a/catalog-item.html
+++ b/catalog-item.html
@@ -48,7 +48,7 @@
 		</section>
 		<section class="body__content">
 			<div class="content__col-left">
-				<figure class="content__preview">
+				<figure class="content__main-picture">
 					<img src="http://placehold.it/300x400" alt="" width="300" height="400">
 				</figure>
 				<section class="content__gallery">
