--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Барбершоп «Бородинский»</title>
   </head>
   <body>
-    <header class="main-header">
-      <div class="container">
-        <nav class="main-navigation">
+  <header class="header">
+    <div class="container">
+      <nav class="header-menu">
           <ul>
             <li>
               <a href="#">Информация</a>
@@ -26,8 +26,8 @@
             </li>
           </ul>
         </nav>
-        <div class="user-block">
-          <a class="login" href="#">Вход</a>
+        <div class="login-wrapper">
+          <a href="#" title="Вход" class="login">Вход</a>
         </div>
       </div>
     </header>
@@ -104,23 +104,23 @@
         </div>
       </div>
     </main>
-    <footer class="main-footer">
-      <div class="container">
+    <footer class="footer">
+      <div class="conteiner">
         <section class="footer-contacts">
-          Барбершоп «Бородинский»<br>
-          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-          <a href="#">Как нас найти?</a><br>
-          Телефон: +7 (812) 666-02-66
+          Барбершоп &laquo;Бородинский&raquo;<br>
+          Адрес: г.Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+          <a href="#" title="Как нас найти">Как нас найти?</a><br>
+          Телефон: <a href="tel:+7(906)666-66-66" title="Как нас найти">+7 (906) 666-66-66</a><br>
         </section>
-        <section class="footer-social">
+        <section class="footer-soccial">
           <p>Давайте дружить!</p>
-          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+          <a href="#" class="soccial-btn social-btn-vk">Вконтакте</a>
+                <a href="#" class="soccial-btn social-btn-fb">Фейсбук</a>
+                <a href="#" class="soccial-btn social-btn-inst">Инстаграм</a>
         </section>
         <section class="footer-copyright">
           <p>Разработано:</p>
-          <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+              <a href="https://htmlacademy.ru" title="Перейти на сайт HTML Academy" class="copyright-link">HTML Academy</a>
         </section>
       </div>
     </footer>
